...
                        self.showCancelButton = true
                    }, onCommit: {
                        self.fetcher.getJsonData(string: searchText)
                    })
                    .foregroundColor(.primary)
                    .keyboardType(.webSearch)
                    .accessibilityIdentifier("Search Text Field")
                    
                    Button(action: {
                        self.searchText = ""
                    }) {
                        Image(systemName: "xmark.circle.fill").opacity(searchText == "" ? 0 : 1)
                    }
...
                                    newBook.imgurl = i.imgurl
                                    newBook.pageCount = i.pageCount
                                    self.saveBook(book: newBook)
                                showAlert.toggle()
                                    
                                }, label: {
                                    Text("Add Book")
                                        .padding().background(Color("Button")).cornerRadius(20).foregroundColor(.white)
                                })

                        }
                    
                        
...
