...
                        .padding()
                        .onAppear(){
                            updateBooks()
                        }
                }
                Spacer()
                    .navigationTitle("Unicorn Books")
            }
            
        }
    }
    
    func updateBooks() {
...
